package fr.univartois.butinfo.qdev.blackjack;

public class House extends CardOwner{

    public House(){
        super("House");
    }

    public boolean isHitting(){
        return true;
    }

    public void flipFirstCard(){

    }

}
