package fr.univartois.butinfo.qdev.blackjack;

import java.util.ArrayList;
import java.util.List;

public class Player extends CardOwner{
    private String name;

    public Player(String name){
        super(name);
    }

    public boolean isHitting(){
        return false;
    }

    public void win(){

    }

    public void push(){

    }

    public void lose(){

    }

    public void bust(){

    }

}
